В hotels.html кнопки сортировки заменены на ссылки, блоки с гостиницами обернуты в контейнер

--- a/hotels.html
+++ b/hotels.html
@@ -74,39 +74,41 @@
             <li class="sort-item"><a href="#">По рейтингу</a></li>
           </ul>
           <div class="sort-buttons">
-            <button class="sort-ascending">По возрастанию</button>
-            <button class="sort-descending">По убыванию</button>
+            <a class="sort-ascending" href="#">По возрастанию</a>
+            <a class="sort-descending" href="#">По убыванию</a>
           </div>
         </section> <!--        end sort section-->
         
         <section class="found">
           <h3 class="visually-hidden">По Вашему запросу найдено:</h3>
-            <article class="found-item">
-              <h4>Amara resort &amp; spa</h4>
-              <img src="http://placehold.it/150x100" alt="Amara resort &amp; spa">
-              <p class="hotel-info">
-                <span class="hotel-type">Гостиница</span>
-                <span class="hotel-price">от 4 000 р.</span>
-              </p>
-             <p class="rating">Рейтинг: 8,5</p>
-             <p><a class="button button-more" href="#">Подробнее</a> <a class="button button-book" href="#">Забронировать</a></p>
-           </article>
+           <div class="found-list">
+             <article class="found-item">
+                <h4>Amara resort &amp; spa</h4>
+                <img src="http://placehold.it/150x100" alt="Amara resort &amp; spa">
+                <p class="hotel-info">
+                  <span class="hotel-type">Гостиница</span>
+                  <span class="hotel-price">от 4 000 р.</span>
+                </p>
+               <p class="rating">Рейтинг: 8,5</p>
+               <p><a class="button button-more" href="#">Подробнее</a> <a class="button button-book" href="#">Забронировать</a></p>
+             </article>
 
-           <article class="found-item">
-             <h4>Desert Quail Inn</h4>
-             <img src="http://placehold.it/150x100" alt="Desert Quail Inn">
-             <p class="hotel-info"><span class="hotel-type">Мотель</span><span class="hotel-price">от 3 000 р.</span></p>
-             <p class="rating">Рейтинг: 8,9</p>
-             <p><a class="button button-more" href="#">Подробнее</a> <a class="button button-book" href="#">Забронировать</a></p>
-           </article>
+             <article class="found-item">
+               <h4>Desert Quail Inn</h4>
+               <img src="http://placehold.it/150x100" alt="Desert Quail Inn">
+               <p class="hotel-info"><span class="hotel-type">Мотель</span><span class="hotel-price">от 3 000 р.</span></p>
+               <p class="rating">Рейтинг: 8,9</p>
+               <p><a class="button button-more" href="#">Подробнее</a> <a class="button button-book" href="#">Забронировать</a></p>
+             </article>
 
-            <article class="found-item">
-             <h4>Villas at Poco Diablo</h4>
-             <img src="http://placehold.it/150x100" alt="Desert Quail Inn">
-             <p class="hotel-info"><span class="hotel-type">Апартаменты</span><span class="hotel-price">от 2 000 р.</span></p>
-             <p class="rating">Рейтинг: 9,2</p>
-             <p><a class="button button-more" href="#">Подробнее</a> <a class="button button-book" href="#">Забронировать</a></p>
-           </article>
+              <article class="found-item">
+               <h4>Villas at Poco Diablo</h4>
+               <img src="http://placehold.it/150x100" alt="Desert Quail Inn">
+               <p class="hotel-info"><span class="hotel-type">Апартаменты</span><span class="hotel-price">от 2 000 р.</span></p>
+               <p class="rating">Рейтинг: 9,2</p>
+               <p><a class="button button-more" href="#">Подробнее</a> <a class="button button-book" href="#">Забронировать</a></p>
+             </article>
+           </div>
 
         </section> <!--        end found section-->
         
