Добавлены файлы изображений, в html вставлены контентные изображения, добавлены стили для body и заголовков

--- a/hotels.html
+++ b/hotels.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Гостиницы</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="main-header">
-    <a class="header-logo" href="index.html"><img src="http://placehold.it/150x100" alt="Логотип сайта Седоны"></a>
+    <a class="header-logo" href="index.html"><img src="img/logo.png" alt="Логотип сайта Седоны" width="138" height="70"></a>
     <nav class="main-nav">
       <ul class="menu">
         <li><a href="#">Информация</a></li>
@@ -84,7 +85,7 @@
            <div class="found-list">
              <article class="found-item">
                 <h4>Amara resort &amp; spa</h4>
-                <img src="http://placehold.it/150x100" alt="Amara resort &amp; spa">
+                <img src="img/hotels_photo-1.jpg" alt="Amara resort &amp; spa" width="135" height="90">
                 <p class="hotel-info">
                   <span class="hotel-type">Гостиница</span>
                   <span class="hotel-price">от 4 000 р.</span>
@@ -95,7 +96,7 @@
 
              <article class="found-item">
                <h4>Desert Quail Inn</h4>
-               <img src="http://placehold.it/150x100" alt="Desert Quail Inn">
+               <img src="img/hotels_photo-2.jpg" alt="Desert Quail Inn" width="135" height="90">
                <p class="hotel-info"><span class="hotel-type">Мотель</span><span class="hotel-price">от 3 000 р.</span></p>
                <p class="rating">Рейтинг: 8,9</p>
                <p><a class="button button-more" href="#">Подробнее</a> <a class="button button-book" href="#">Забронировать</a></p>
@@ -103,7 +104,7 @@
 
               <article class="found-item">
                <h4>Villas at Poco Diablo</h4>
-               <img src="http://placehold.it/150x100" alt="Desert Quail Inn">
+               <img src="img/hotels_photo-3.jpg" alt="Desert Quail Inn" width="135" height="90">
                <p class="hotel-info"><span class="hotel-type">Апартаменты</span><span class="hotel-price">от 2 000 р.</span></p>
                <p class="rating">Рейтинг: 9,2</p>
                <p><a class="button button-more" href="#">Подробнее</a> <a class="button button-book" href="#">Забронировать</a></p>
