В index.html доработан раздел с картой, с учетом доступности

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
         </section> <!--        end hotel-search section-->
         
         <section class="map">
-          <h3>Карта</h3>
-            <img src="img/map.png" alt="Карта">
+          <h3 class="visually-hidden">Как нас найти</h3>
+            <img src="img/map.png" alt="Седона — город, расположенный по обе стороны границы между округами Коконино и Явапай в северной области Долины Верде штата Аризона.">
         </section> <!--        end map section-->
 
       </section> <!--end appointment section-->
