В hotels.html отмечены по умолчанию чекбоксы, отмеченные на макете

--- a/hotels.html
+++ b/hotels.html
@@ -30,7 +30,7 @@
             <legend>Инфраструктура:</legend>
             <ul>
               <li>
-                <input class="visually-hidden filter-input" type="checkbox" name="pool" id="pool">
+                <input class="visually-hidden filter-input" type="checkbox" name="pool" id="pool" checked>
                 <label for="pool">Бассейн</label>
               </li>
               <li>
@@ -47,15 +47,15 @@
             <legend>Тип жилья:</legend>
             <ul>
               <li>
-                <input class="visually-hidden filter-input" type="checkbox" name="hotel" id="hotel">
+                <input class="visually-hidden filter-input" type="checkbox" name="hotel" id="hotel" checked>
                 <label for="hotel">Гостиница</label>
               </li>
               <li>
-                <input class="visually-hidden filter-input" type="checkbox" name="motel" id="motel">
+                <input class="visually-hidden filter-input" type="checkbox" name="motel" id="motel" checked>
                 <label for="motel">Мотель</label>
               </li>
               <li>
-                <input class="visually-hidden filter-input" type="checkbox" name="apartments" id="apartments">
+                <input class="visually-hidden filter-input" type="checkbox" name="apartments" id="apartments" checked>
                 <label for="apartments">Апартаменты</label>
               </li>
             </ul>
