Добавлена обертка для изображений в блоке гостиниц, отрегулированы параметры их размеров

--- a/hotels.html
+++ b/hotels.html
@@ -118,7 +118,9 @@
                     <a class="button button-book" href="#">Забронировать</a>
                   </div>
                 </div>
-                <img src="img/hotels_photo-1.jpg" alt="Amara resort &amp; spa" width="135" height="90">
+                <div class="found-img-wrapper">
+                  <img src="img/hotels_photo-1.jpg" alt="Amara resort &amp; spa" width="135" height="90">
+                </div>
                 <div class="rating stars-4">
                   <p>Рейтинг: 8,5</p>
                 </div>
@@ -136,7 +138,9 @@
                     <a class="button button-book" href="#">Забронировать</a>
                   </div>
                 </div>
-                <img src="img/hotels_photo-2.jpg" alt="Desert Quail Inn" width="135" height="90">
+                <div class="found-img-wrapper">
+                  <img src="img/hotels_photo-2.jpg" alt="Desert Quail Inn" width="135" height="90">
+                </div>
                 <div class="rating stars-3">
                   <p>Рейтинг: 8,9</p>
                 </div>
@@ -154,7 +158,9 @@
                     <a class="button button-book" href="#">Забронировать</a>
                   </div>
                 </div>
-                <img src="img/hotels_photo-3.jpg" alt="Desert Quail Inn" width="135" height="90">
+                <div class="found-img-wrapper">
+                  <img src="img/hotels_photo-3.jpg" alt="Desert Quail Inn" width="135" height="90">
+                </div>
                 <div class="rating stars-2">
                   <p>Рейтинг: 9,2</p>
                 </div>
