Выполнено оживление интерактивных элементов проекта

--- a/hotels.html
+++ b/hotels.html
@@ -25,8 +25,8 @@
         <h1 class="visually-hidden">Поиск гостиницы в Седоне</h1>
         <section class="filter">
           <h2 class="visually-hidden">Фильтры гостиниц</h2>
-          <form class="form-filter" action="hotels.html" method="get">
-            <fieldset class="infrastructure">
+          <form class="form-filter" action="https://echo.htmlacademy.ru" method="get">
+            <fieldset class="fieldset infrastructure">
               <legend>Инфраструктура:</legend>
               <ul>
                 <li>
@@ -43,7 +43,7 @@
                 </li>
               </ul>
             </fieldset>
-            <fieldset class="housing">
+            <fieldset class="fieldset housing">
               <legend>Тип жилья:</legend>
               <ul>
                 <li>
@@ -78,7 +78,7 @@
 
                 <svg class="range-toggle range-toggle-max" xmlns="http://www.w3.org/2000/svg" width="20" height="23" viewBox="0 0 20 23"><path opacity=".3" fill="#ABABAB" d="M10 20C4.477 20 0 15.522 0 10v2c0 5.522 4.477 10 10 10 5.522 0 10-4.478 10-10v-2c0 5.522-4.478 10-10 10z"/><circle fill="#FFF" cx="10" cy="10" r="10"/><circle fill="#ABABAB" cx="10" cy="10" r="2"/></svg>
               </div>
-              <button class="button button-show" type="submit">Показать</button>
+              <a class="button button-show" id="button-show" href="search-results.html">Показать</a>
             </section> <!--          end filter-range section-->
 
           </form>
@@ -199,5 +199,6 @@
         </div>
       </footer>
     </div>
+    <script src="js/script.js"></script>
   </body>
 </html>
