--- a/index.html
+++ b/index.html
@@ -102,37 +102,40 @@
           <section class="hotel-search">
             <h3 class="visually-hidden">Форма поиска</h3>
             <button class="button button-show-form">Поиск гостиницы в Седоне</button>
-            <form class="appointment-form" action="index.html" method="get">
-              <label for="date-in">Дата заезда:</label>
-              <div class="input-date-wrapper">
-                <input type="text" name="date-in" id="date-in" placeholder="24 апреля 2017">
-                <svg class="calendar" xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
-              </div>
-              <label for="date-out">Дата выезда:</label>
-              <div class="input-date-wrapper">
-                <input type="text" name="date-out" id="date-out" placeholder="4 июля 2017">
-                <svg class="calendar" xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
-              </div>
-              <label for="adults">Взрослые:</label>
-              <div class="visitors-count">
-                <button class="appointment-form-button">&ndash;</button>
-                <input type="text" name="adults" id="adults" placeholder="2">
-                <button class="appointment-form-button">+</button>
-              </div>
-              <label for="children">Дети:</label>
-              <div class="visitors-count">
-                <button class="appointment-form-button">&ndash;</button>
-                <input type="text" name="children" id="children" placeholder="0">
-                <button class="appointment-form-button">+</button>
-              </div>
-              <button class="button button-search" type="submit">Найти</button>
-            </form>
+            <div class="appointment-form-container">
+              <form class="appointment-form" action="https://echo.htmlacademy.ru" method="get">
+                <label for="date-in">Дата заезда:</label>
+                <div class="input-date-wrapper">
+                  <input type="text" name="date-in" id="date-in" placeholder="24 апреля 2017" value="">
+                  <svg class="calendar" xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
+                </div>
+                <label for="date-out">Дата выезда:</label>
+                <div class="input-date-wrapper">
+                  <input type="text" name="date-out" id="date-out" placeholder="4 июля 2017" value="">
+                  <svg class="calendar" xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
+                </div>
+                <label for="adults">Взрослые:</label>
+                <div class="visitors-count">
+                  <button class="appointment-form-button adults-less" type="button">&ndash;</button>
+                  <input type="text" name="adults" id="adults" placeholder="2" value="">
+                  <button class="appointment-form-button adults-more" type="button">+</button>
+                </div>
+                <label for="children">Дети:</label>
+                <div class="visitors-count">
+                  <button class="appointment-form-button children-less" type="button">&ndash;</button>
+                  <input type="text" name="children" id="children" placeholder="0" value="">
+                  <button class="appointment-form-button children-more" type="button">+</button>
+                </div>
+                <button class="button button-search" type="submit">Найти</button>
+              </form>
+            </div>
           </section> <!--        end hotel-search section-->
         </section> <!--end appointment section-->
 
         <section class="map">
           <h2 class="visually-hidden">Как нас найти</h2>
           <div class="map-wrapper">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d704955.1350324089!2d-112.24984124448874!3d34.83721446784348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1504607734139" width="600" height="450" style="border:0" allowfullscreen></iframe>
             <img src="img/map.png" alt="Седона — город, расположенный по обе стороны границы между округами Коконино и Явапай в северной области Долины Верде штата Аризона." width="1200" height="593">
           </div>
         </section> <!--        end map section-->
@@ -168,6 +171,8 @@
       </footer>
 
     </div>
+    
+    <script src="js/script.js"></script>
 
   </body>
 </html>
