--- a/hotels.html
+++ b/hotels.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Гостиницы</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize-min.css">
+    <link rel="stylesheet" href="css/style-min.css">
   </head>
   <body>
     <div class="main-wrapper">
@@ -199,6 +199,6 @@
         </div>
       </footer>
     </div>
-    <script src="js/script.js"></script>
+    <script src="js/script-min.js"></script>
   </body>
 </html>
