Внесены исправления после первого этапа проверки

--- a/hotels.html
+++ b/hotels.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Гостиницы</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize-min.css">
-    <link rel="stylesheet" href="css/style-min.css">
+    <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
     <div class="main-wrapper">
@@ -78,7 +78,7 @@
 
                 <svg class="range-toggle range-toggle-max" xmlns="http://www.w3.org/2000/svg" width="20" height="23" viewBox="0 0 20 23"><path opacity=".3" fill="#ABABAB" d="M10 20C4.477 20 0 15.522 0 10v2c0 5.522 4.477 10 10 10 5.522 0 10-4.478 10-10v-2c0 5.522-4.478 10-10 10z"/><circle fill="#FFF" cx="10" cy="10" r="10"/><circle fill="#ABABAB" cx="10" cy="10" r="2"/></svg>
               </div>
-              <a class="button button-show" id="button-show" href="search-results.html">Показать</a>
+              <input class="button button-show" type="submit" value="Показать">
             </section> <!--          end filter-range section-->
 
           </form>
@@ -98,8 +98,8 @@
 
             </section>
             <div class="sort-buttons">
-              <a class="sort-ascending" href="#"><span class="visually-hidden">По возрастанию</span></a>
-              <a class="sort-descending sort-active" href="#"><span class="visually-hidden">По убыванию</span></a>
+              <button class="sort-ascending" type="button"><span class="visually-hidden">По возрастанию</span></button>
+              <button class="sort-descending sort-active" type="button"><span class="visually-hidden">По убыванию</span></button>
             </div>
           </div> <!--        end sort section-->
 
@@ -168,7 +168,6 @@
             </div>
 
           </section> <!--        end found section-->
-
         </section> <!--      end search-results section-->
       </main>
 
@@ -199,6 +198,6 @@
         </div>
       </footer>
     </div>
-    <script src="js/script-min.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
