--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet"> 
-    <link rel="stylesheet" href="css/normalize-min.css">
-    <link rel="stylesheet" href="css/style-min.css">
+    <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
     <div class="main-wrapper">
@@ -19,7 +19,6 @@
             <li><a href="hotels.html">Гостиницы</a></li>
           </ul>
         </nav>
-
       </header>
     
       <main class="container">
@@ -139,8 +138,6 @@
             <img src="img/map.png" alt="Седона — город, расположенный по обе стороны границы между округами Коконино и Явапай в северной области Долины Верде штата Аризона." width="1200" height="593">
           </div>
         </section> <!--        end map section-->
-
-
       </main>
 
       <footer class="main-footer">
@@ -172,7 +169,7 @@
 
     </div>
     
-    <script src="js/script-min.js"></script>
+    <script src="js/script.min.js"></script>
 
   </body>
 </html>
